# mimium-rust-bench

./: Cargo.toml  readme.md
benches/: dsp_bench.rs
src/: directosc.pd  directosc_cloned.pd  lib.rs  replicate.dsp  replicate.mmm  replicate.pd  replicate100.dsp  replicate100.mmm  replicate100_faust.rs  replicate100_mimium.rs  replicate_clone100.pd  replicate_faust.rs  replicate_libpd.rs  replicate_mimium.rs  replicate_mimium_vm.rs  replicate_mimium_wasm.rs  replicate_noclosure.mmm
