[package]
name = "osc-portaudiorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "*"
libpd-sys = "0.3"

[dependencies.default-boxed]
version = "0.2.0"
optional = true

[features]
default = ["default-boxed"]
default-boxed = ["dep:default-boxed"]

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
incremental = false
overflow-checks = false

[[bench]]
name = "dsp_bench"
harness = true
